<?xml version="1.0"?>
<package>
  <name>bwi_coffee_new</name>
  <version>0.0.0</version>
  <description>The bwi_coffee_new package</description>

  <maintainer email="shiqi.zhang6@gmail.com">Shiqi Zhang</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/bwi_experimental</url>
  <url type="repository">https://github.com/utexas-bwi/bwi_experimental.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi_experimental/issues</url>

  <author email="shiqi.zhang6@gmail.com">Shiqi Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>bwi_planning</run_depend>
  <run_depend>bwi_coffee</run_depend>

</package>
