<?xml version="1.0"?>
<package>
  <name>bwi_planning_common_new</name>
  <version>0.0.0</version>
  <description>The bwi_planning_common_new package</description>

  <maintainer email="shiqi.zhang6@gmail.com">Shiqi Zhang</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/shiqizhang6/bwi_experimental/tree/master/bwi_planning_common_new/</url>

  <author email="shiqi.zhang6@gmail.com">Shiqi Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bwi_mapper</build_depend>
  <build_depend>bwi_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>bwi_planning_common</build_depend>

  <run_depend>bwi_mapper</run_depend>
  <run_depend>bwi_tools</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>utexas_gdc</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>bwi_planning_common</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
