<?xml version="1.0"?>
<package>
  <name>segbot_logical_translator_new</name>
  <version>0.0.0</version>
  <description>The segbot_logical_translator_new package</description>

  <maintainer email="shiqi.zhang6@gmail.com">Shiqi Zhang</maintainer>

  <license>BSD</license>

  <url type="website">TBD</url>


  <author email="shiqi.zhang6@gmail.com">Shiqi Zhang</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>bwi_mapper</build_depend>
  <build_depend>bwi_planning_common</build_depend>
  <build_depend>bwi_planning_common_new</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>bwi_mapper</run_depend>
  <run_depend>bwi_planning_common</run_depend>
  <run_depend>bwi_planning_common_new</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>segbot_gazebo</run_depend>
  <run_depend>segbot_navigation</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>utexas_gdc</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
